# guardian_stride

./: README.md
gs_bringup/: CMakeLists.txt  package.xml  setup.py
gs_bringup/config/: system_params.yaml
gs_bringup/gs_bringup/: __init__.py
gs_bringup/launch/: guardian_stride.launch.py  hardware_only.launch.py  perception_only.launch.py
gs_exo_control/: CMakeLists.txt  package.xml
gs_exo_control/config/: motor_params.yaml
gs_exo_control/launch/: exo_control.launch.py
gs_exo_control/src/: admittance_controller.cpp  admittance_controller.hpp  exo_controller_node.cpp  vesc_interface.cpp  vesc_interface.hpp
gs_fusion/: CMakeLists.txt  package.xml
gs_fusion/config/: ekf_params.yaml  imu_params.yaml
gs_fusion/include/: gait_detector.hpp
gs_fusion/launch/: fusion.launch.py
gs_fusion/src/: gait_detector.cpp  imu_node.cpp  occupancy_bridge.cpp  tof_node.cpp
gs_msgs/: CMakeLists.txt  package.xml
gs_msgs/msg/: GaitState.msg  GuidanceTorque.msg  Intent.msg  MotorCmd.msg  SafetyCmd.msg
gs_perception/: CMakeLists.txt  package.xml
gs_perception/config/: perception_params.yaml
gs_perception/include/: semantic_visualizer.hpp  traversability_calculator.hpp
gs_perception/launch/: perception.launch.py
gs_perception/scripts/: export_segformer.py
gs_perception/src/: costmap_bridge.cpp  segformer_node.cpp  semantic_visualizer.cpp  traversability_calculator.cpp
gs_planning/: CMakeLists.txt  costmap_plugins.xml  package.xml
gs_planning/config/: guidance_params.yaml  nav2_params.yaml
gs_planning/launch/: planning.launch.py
gs_planning/src/: guidance_torque_node.cpp  intent_to_goal.cpp  semantic_costmap_plugin.cpp
gs_safety/: CMakeLists.txt  package.xml
gs_safety/include/: collision_checker.hpp
gs_safety/src/: collision_checker.cpp  emergency_stop.cpp  safety_monitor.cpp
gs_voice/: CMakeLists.txt  package.xml
gs_voice/config/: voice_params.yaml
gs_voice/launch/: voice.launch.py
gs_voice/src/: intent_parser.cpp  intent_parser.hpp  tts_manager.cpp  tts_manager.hpp  voice_node.cpp
