<?xml version="1.0"?>
<package format="3">
  <name>gs_bringup</name>
  <version>1.0.0</version>
  <description>系统总启动包：Guardian Stride 全系统启动入口</description>
  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
