<?xml version="1.0"?>
<package format="3">
  <name>gs_exo_control</name>
  <version>1.0.0</version>
  <description>M6 外骨骼控制模块：1kHz 主控节点 + 导纳控制律 + VESC 通信</description>
  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
