<?xml version="1.0"?>
<package format="3">
  <name>gs_fusion</name>
  <version>1.0.0</version>
  <description>M3 传感器融合模块：IMU + ToF + EKF 融合</description>

  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
