<?xml version="1.0"?>
<package format="3">
  <name>gs_msgs</name>
  <version>1.0.0</version>
  <description>Guardian Stride 公共消息定义包</description>

  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
