<?xml version="1.0"?>
<package format="3">
  <name>gs_safety</name>
  <version>1.0.0</version>
  <description>Guardian Stride 安全监控模块</description>

  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>