<?xml version="1.0"?>
<package format="3">
  <name>gs_voice</name>
  <version>1.0.0</version>
  <description>M2 语音交互模块：唤醒词 + ASR + 意图解析 + TTS</description>
  <maintainer email="dev@guardian-stride.com">Guardian Stride Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
